--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "7.4.2",
+    "@mantine/core": "^7.4.2",
     "@mantine/hooks": "7.4.2",
+    "@tabler/icons-react": "^2.46.0",
     "next": "14.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -21,8 +22,8 @@
     "@types/react-dom": "18.2.14",
     "eslint": "8.53.0",
     "eslint-config-next": "14.0.1",
-    "postcss": "^8.4.31",
-    "postcss-preset-mantine": "1.12.3",
+    "postcss": "^8.4.33",
+    "postcss-preset-mantine": "^1.12.3",
     "postcss-simple-vars": "^7.0.1",
     "typescript": "5.2.2"
   },
