--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.4.2",
+    "@mantine/form": "^7.5.3",
     "@mantine/hooks": "7.4.2",
     "@tabler/icons-react": "^2.46.0",
     "next": "14.0.1",
