--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@mantine/core": "^7.4.2",
     "@mantine/form": "^7.5.3",
-    "@mantine/hooks": "7.4.2",
+    "@mantine/hooks": "^7.4.2",
     "@tabler/icons-react": "^2.46.0",
     "next": "14.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sweetalert2": "^11.10.5"
   },
   "devDependencies": {
     "@types/node": "20.8.10",
